# tvtime-scrapy-api

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml  test.yml
docs/: getting-started.md  openapi.md  system.md
docs/assets/: openapi.json
docs/reference/: api.md  index.md  reference.md  repository.md  routes.md  services.md  spider.md
getting-started/: index.html
openapi/: index.html  swagger-fee9ff49.html
reference/: index.html
reference/repository/: index.html
reference/routes/: index.html
reference/services/: index.html
reference/spider/: index.html
search/: search_index.json
src/: config.py  main.py
src/core/: spider.py
src/models/: api.py  data.py  db.py  exceptions.py
src/repository/: celery_repository.py  models.py  postgre_repository.py  redis_repository.py  request_repositoy.py  spider.py
src/routes/: scraper.py  tvtime.py  user.py
src/service/: security.py  spider.py  tvtime.py  tvtime_data.py  tvtime_scraper.py
system/: index.html
tests/: test_app.py  test_service.py  test_spider.py
tv-viewer/: .gitignore  README.md  pyproject.toml
tv-viewer/src/: app.py  utils.py
tv-viewer/src/repository/: redis.py  schema.py  storage.py
tv-viewer/src/service/: tv_service.py  tv_time.py
